# ha_still_here

./: .env.sample  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  docker-compose.yml  pyproject.toml
backend/still_here/: bootstrap.py  messagebus.py  settings.py
backend/still_here/core/: repository.py
backend/still_here/core/domain/: commands.py  events.py  model.py
backend/still_here/core/service/: unit_of_work.py
backend/still_here/core/service/handlers/: __init__.py  command_handlers.py  event_handlers.py
backend/still_here/entrypoints/rest/: __init__.py  dependencies.py  server.py
backend/still_here/entrypoints/rest/routers/: __init__.py  device.py
backend/still_here/entrypoints/rest/schema/: __init__.py  device.py  shared.py
backend/still_here/foundation/: __init__.py  exceptions.py  utils.py
backend/still_here/foundation/domain/: __init__.py  commands.py  events.py
backend/still_here/foundation/service/: __init__.py  unit_of_work.py
backend/still_here/scheduler/: __init__.py  task.py
